[tool.poetry]
name = "ddb-extraction"
version = "0.1.0"
description = "Extract Vocaloid DDB Files"
authors = ["ain-soph"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
